2007-09-07  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_script_proc):
	applied patch from Kevin Cozens which implements RUN-WITH-LAST-VALS.
	On top of that, factored out script_fu_collect_standard_args()
	which collects DISPLAY,IMAGE,[DRAWABLE|LAYER|...] from the passed
	parameters according to the new calling conventions (the old code
	for INTERACTIVE was broken). Also cleaned up the function a bit.
	Fixes bug #472493.

2007-09-07  Michael Natterer  <mitch@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1): use a temporary
	variable to store the return value of tile_manager_get() instead
	of assigning to tm->cached_tile directly to make sure
	tm->cached_num and tm->cached_tile are always in a consistent
	state (the requested tile might be invalid and needs to be
	validated, which would call tile_manager_get() recursively, which
	in turn would clear the cached tile). Fixes bug #472770.

2007-09-06  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_auto_shrink):
	Call gimp_rectangle_tool_rectangle_changed and recalculate handle
	sizes after 'Auto shrink selection'. Fixes bug #474344.

2007-09-06  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/contactsheet.scm: Preserve aspect ratio
	of original images. Center thumbnails in space above filename label.
	Added new sheet size of 1600x1200 pixels. Changed a dialog label.

2007-09-06  Simon Budig  <simon@gimp.org>

	* plug-ins/common/convmatrix.c: there is no need to mess
	with the selected channels within check_config(). Also fix
	bug with with copying its values into the chanmask
	in convolve_image()

	Fixes bug #472518

2007-09-06  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h: quick fix:
	raise the cell segment size as well as the number of possible
	segments to reduce the likelihood of a failing (make-vector)

	(yes, this is a hack and no proper fix)
